# trahs

./: .gitignore  Makefile  stack.yaml  trahs.cabal
app/: Main.hs
src/: Meta.hs  Sync.hs  Trahs.hs  Types.hs
