name:                trahs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/gabesoft/trahs#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Adomnicai
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trahs, Types, Sync, Meta
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , directory >= 1.2
                     , filepath >= 1.4
                     , lens
                     , process >= 1.4
                     , random >= 1.1
                     , SHA2 >= 0.2
                     , unix-compat >= 0.4
                     , uuid >= 1.3
  default-language:    Haskell2010

executable trahs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , directory >= 1.2
                     , filepath >= 1.4
                     , lens
                     , process >= 1.4
                     , SHA2 >= 0.2
                     , trahs
                     , unix-compat >= 0.4
                     , uuid >= 1.3
  default-language:    Haskell2010

test-suite trahs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trahs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/trahs
